[package]
name = "hulyrs"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = { version = "0.27.1", features = ["derive"] }
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }
reqwest-middleware = { version = "0.4.2", features = ["json", "rustls-tls"] }
reqwest-retry = { version = "0.7.0" }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
derive_builder = "0.20.2"
ksuid = "0.2.0"
bytes = "1.10.1"
uuid = { version = "1.16.0", features = ["serde"] }
config = "0.15.11"
secrecy = { version = "0.10.3", features = ["serde"] }
serde_with = "3.12.0"

actix-web = { version = "4.10.2", optional = true, features = ["rustls"] }
rdkafka = { version = "0.37.0", optional = true, features = [
    "cmake-build",
    "ssl-vendored",
    "tracing",
] }

[dev-dependencies]
anyhow = "1.0.98"
tokio = { version = "1", features = ["full"] }

[features]
default = ["retry"]
actix = ["dep:actix-web"]
kafka = ["dep:rdkafka"]
retry = []
