[package]
name = "hulyrs"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = { version = "0.27.1", features = ["derive"] }
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }
governor = { version = "0.10.0", features = ["std"] }
reqwest-websocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
derive_builder = "0.20.2"
bytes = "1.10.1"
uuid = { version = "1.16.0", features = ["serde"] }
config = "0.15.11"
secrecy = { version = "0.10.3", features = ["serde"] }
serde_with = "3.12.0"
rand = "0.9.1"
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }

actix-web = { version = "4.10.2", optional = true, features = ["rustls"] }
rdkafka = { version = "0.38.0", optional = true, features = [
    "cmake-build",
    "ssl-vendored",
    "tracing",
] }
num-traits = "0.2.19"
itoa = "1.0.15"
ryu = "1.0.20"

# Middleware
reqwest-middleware = { version = "0.4.2", features = ["json", "rustls-tls"] }
reqwest-retry = { version = "0.7.0", optional = true }
reqwest-ratelimit = { version = "0.4.1", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio_with_wasm = { version = "0.8.6", features = ["rt", "sync", "macros"] }
wasmtimer = { version = "0.4.1" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros"] }

[dev-dependencies]
anyhow = "1.0.98"
tokio = { version = "1", features = ["full"] }

[features]
default = ["reqwest_middleware"]
actix = ["dep:actix-web"]
kafka = ["dep:rdkafka"]
reqwest_middleware = ["dep:reqwest-retry", "dep:reqwest-ratelimit"]

[lints.clippy]
result_large_err = "allow"